# OpenCL-labs

./: .gitignore  CMakeLists.txt  README.md  generate_data.py
cmake/: FindOpenCL.cmake
src/: conv_shared.cl  convolution.cl  main.cpp  matrix_mult.cl  reduction.cl
