CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(Lab1_OpenCL)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
SET(RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)

FIND_PACKAGE(OpenCL REQUIRED)
INCLUDE_DIRECTORIES(${OPENCL_INCLUDE_DIR} ${PROJECT_SOURCE_DIR}/include)

file(GLOB PROJECT_SRC "src/*.cpp")

ADD_EXECUTABLE(lab1 ${PROJECT_SRC})
TARGET_LINK_LIBRARIES(lab1 ${OPENCL_LIBRARY})